--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "husky": {
       "hooks": {
         "pre-commit": "npm run lint",
-        "pre-push": "npm run test"
+        "pre-push": "npm run test:unit"
       }
     }
   }
